# openfoam-simulation

./: .gitattributes  .gitignore  LICENSE  README.md  README_CN.md  SKILL.md  pyproject.toml
evals/: evals.json
references/: compute-optimization.md  documentation-policy.md  error-diagnostics.md  geometry-physics-vv.md  intake-schema.md  local-topology-setup-cn.md  model-import.md  solver-compilation.md  solver-selection.md  topology-optimization.md  validation-and-convergence.md
registry/: problem-types.yaml  solvers.yaml
registry/learned-workflows/: .gitkeep
schemas/: learning-record.schema.json  simulation-spec.schema.json  solver-registry.schema.json  workflow.schema.json
scripts/: __init__.py  create_run_manifest.py  detect_environment.sh  doctor.py  inspect_openfoam.sh  parse_of_log.py  scaffold_learning_record.py  validate_case.sh
scripts/model-viewer/: .gitignore  app.py  package-lock.json  package.json  pick_face.py  requirements-gradio.txt  requirements.txt  run.bat  server.py  step_parser.py  vendor_assets.py
scripts/model-viewer/static/: pick.html  viewer.html
templates/_common-case/: README.md  run-baseline.sh  run-optimisation.sh
templates/_common-case/0/: U  p
templates/duct-shape-optimization/: README.md  workflow.yaml
templates/external-flow-drag/: README.md  workflow.yaml
templates/internal-flow-pressure-loss/: README.md  workflow.yaml
templates/porous-density-topology/: README.md  workflow.yaml
tests/: test_contracts.py  test_doctor.py  test_learning_record.py  test_model_viewer.py  test_templates_and_logs.py
(+20 files in other folders)
