[project]
name = "openfoam-simulation-skill"
version = "1.1.0"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6,<7", "jsonschema>=4,<5"]

[project.optional-dependencies]
viewer = [
  "fastapi>=0.100,<1",
  "uvicorn>=0.20,<1",
  "python-multipart>=0.0.9,<1",
  "numpy>=1.20,<3",
  "trimesh>=4,<5",
]
dev = ["pytest>=8,<10", "httpx>=0.27,<1", "ruff>=0.8,<1"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]
